[build-system]
requires = ["maturin>=0.14,<0.15"]
build-backend = "maturin"

[project]
name = "kangajo"
version = "0.2.0"
description = "A library to flatten JSON data using Rust."
authors = [{ name = "Andrew Mayes", email = "andrewmayes14@hotmail.com" }]
license = { text = "MIT" }
readme = "README.md"
repository = "https://github.com/amaye15/kangajo"